# django-quasar-template

./: Makefile
backend/: pyproject.toml
backend/apps/api/auth/: admin.py  models.py
backend/apps/api/news/: admin.py  apps.py  models.py
backend/apps/api/news/migrations/: 0001_initial.py  0002_auto_20210716_1247.py  0003_auto_20210716_1454.py
backend/apps/api/news/v1/: routers.py  serializers.py  views.py
backend/apps/api/schedule/: __init__.py  admin.py  apps.py  constants.py  models.py  signals.py  urls.py
backend/apps/api/schedule/migrations/: 0001_initial.py
backend/apps/api/schedule/services/: __init__.py  change_of_item_type_name.py  clear_schedule.py  parser_csv.py
backend/apps/api/schedule/v1/: routers.py  serializers.py  views.py
backend/apps/core/api/v1/: urls.py
backend/apps/core/main/: admin.py  urls.py  views.py
backend/apps/core/utils/: views.py
backend/config/: urls.py
backend/config/settings/base/: apps.py  environment.py
backend/config/settings/components/: __init__.py  debug_toolbar.py  rest_framework.py  static.py
backend/config/settings/environments/: common.py  production.py
frontend/: README.md  package.json  quasar.conf.js
